Use of List interface instead of different types of containers